[package]
name = "zero2prod"
version = "0.1.0"
authors = ["darshi1337"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
actix-rt = "2.5.0"
reqwest = "0.12.4"
